--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                         <div>
                             <div class="relative h-64">
                                 <div class="absolute inset-0 flex items-center justify-center">
-                                     <img src="./theme-assets/images/private-and-secure-bg-2x.png" srcset="./theme-assets/images/private-and-secure-bg-2x.png 2x">
+                                     <img style="width: 100%;" src="./theme-assets/images/private-and-secure-bg-2x.png" srcset="./theme-assets/images/private-and-secure-bg-2x.png 2x">
                                     
                                 </div>
                                 <div class="absolute inset-0 flex items-center justify-center private-and-secure animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">
@@ -568,10 +568,10 @@
                                             </div>
                                         </div>
                                         <div class="inner relative">
-                                            <div  style="width: 373px; height: 63px;" class="description py-6">
+                                            <div  style="width: 323px; height: 63px;" class="description py-6">
                                                 <p style="color: black;" class="max-w-6xl text-black-600  text-1xl font-display leading-snug px-12">Hey, Can i tell you a secret? <br class="hidden md:inline"></p>
                                             </div>
-                                            <div style="width: 373px; height: 63px;" class="overlay h-full w-full justify-between px-16 items-center flex bg-black top-0 absolute">
+                                            <div style="width: 323px; height: 63px;" class="overlay h-full w-full justify-between px-16 items-center flex bg-black top-0 absolute">
                                                 <div class="text-white bold  text-1xl">10!101ß#{%3</div>
                                                 <div class="lock relative">
                                                     
