--- a/Secure-Crypto-Wallet.html
+++ b/Secure-Crypto-Wallet.html
@@ -87,7 +87,7 @@
 	<header class="page-header">
 		<!-- Horizontal Menu Start-->
 		<nav class="main-menu static-top navbar-dark navbar navbar-expand-lg fixed-top mb-1"><div class="container">
-	  <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="index.html"><img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 160px; height: 70px;" src="theme-assets/images/pcnp1112 - Copy.png" alt="Pcnprotocol Logo"/></a>
+	  <a class="navbar-brand animated" data-animation="fadeInDown" data-animation-delay="1s" href="index.html"><img class="animated" data-animation="fadeInUpShorter"data-animation-delay="0.4s" style="width: 160px; height: 70px;" src="theme-assets/images/pcnp1112 - Copy.png" alt="Pcnprotocol Logo"/></a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -154,7 +154,7 @@
    
     <main><!-- Header: 3D Animation -->
      	<!--WALLET-INTRO-->
-	<section style="margin-top: 100px; margin-left: 30px;" id="about" class="pt-16 xl:pt-0">
+	<section style="margin-top: 100px; margin-left: 30px;" class="pt-16 xl:pt-0 head-area" id="head-area about" >
 		<div class="max-w-screen-2xl mx-auto lg:px-12">
 			<div id="particles-js"></div>
 			<div class="grid md:grid-cols-2">
@@ -191,14 +191,14 @@
 			<div class="grid md:grid-cols-2 gap-24">
 				<div class="px-8">
 					<div class="mx-auto flex justify-center items-center md:block md:py-48 pb-12">
-						<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" src="theme-assets/images/pcnp1112 - Copy.png">
+						<img class="animated" data-animation="fadeInUpShorter"data-animation-delay="0.4s" src="theme-assets/images/pcnp1112 - Copy.png">
 					</div>
 				</div>
 				<div class="flex flex-col px-8 order-first md:order-last justify-center items-start md:pt-0 pt-32">
-					<h3 class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Take Control of Your Funds</h3>
-					<p style="color: #fff;" class="text-gray-300 mt-12 text-xl font-display leading-normal animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">The PCNP Wallet is entirely non-custodial – only you have access to your funds. Not banks. Not even PCNP. Send, receive, and store ETH, PCNP, DAI, collectibles and other ethereum assets on your terms.</p>
+					<h3 class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter"data-animation-delay="0.2s">Take Control of Your Funds</h3>
+					<p style="color: #fff;" class="text-gray-300 mt-12 text-xl font-display leading-normal animated" data-animation="fadeInUpShorter"data-animation-delay="0.4s">The PCNP Wallet is entirely non-custodial – only you have access to your funds. Not banks. Not even PCNP. Send, receive, and store ETH, PCNP, DAI, collectibles and other ethereum assets on your terms.</p>
 
-					<a style="width: 150px; margin-top: 20px;" href="https://our.PCNP.io/inside-the-non-custodial-wallet/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
+					<a style="width: 150px; margin-top: 20px;" href="https://our.PCNP.io/inside-the-non-custodial-wallet/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white animated" data-animation="fadeInUpShorter"data-animation-delay="0.4s">
 						Learn More
 						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 					  </a>
@@ -212,10 +212,10 @@
 		<div class="max-w-screen-2xl mx-auto lg:px-12">
 			<div class="grid md:grid-cols-2 gap-24">
 				<div class="flex flex-col px-8 justify-center items-start md:pt-0 pt-32">
-					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Designed for Security</h3>
-					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display  leading-normal animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Protect your funds with the latest security standards, anti-phishing mechanisms, and locally generated and stored public and private keys. Trust your assets are safe with the PCNP Wallet.</p>
+					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter"data-animation-delay="0.2s">Designed for Security</h3>
+					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display  leading-normal animated" data-animation="fadeInUpShorter"data-animation-delay="0.4s">Protect your funds with the latest security standards, anti-phishing mechanisms, and locally generated and stored public and private keys. Trust your assets are safe with the PCNP Wallet.</p>
 					<div class="flex">
-						<a style="width: 180px; margin-top: 20px;" href="https://specs.PCNP.io/spec/2#initial-key-generation" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
+						<a style="width: 180px; margin-top: 20px;" href="https://specs.PCNP.io/spec/2#initial-key-generation" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white animated" data-animation="fadeInUpShorter"data-animation-delay="0.4s">
 							View the Specs
 							<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 						  </a>
@@ -223,7 +223,7 @@
 				</div>
 				<div class="px-8">
 					<div class="mx-auto flex justify-center items-center md:block pb-32 md:py-48">
-						<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" src="theme-assets/images/wallet-security-2x.png" srcset="./theme-assets/images/wallet-security-2x.png 2x">
+						<img class="animated" data-animation="fadeInUpShorter"data-animation-delay="0.4s" src="theme-assets/images/wallet-security-2x.png" srcset="./theme-assets/images/wallet-security-2x.png 2x">
 					</div>
 				</div>
 			</div>
@@ -239,10 +239,10 @@
 					<div class="h-full px-8 py-32 md:p-32 lg:pr-64 lg:pl-8">
 						<div class="row">
 							<div class="col-md-11 flex flex-col col-lg-10">
-								<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" src="theme-assets/images/wallet-payments-2x.png">
+								<img class="animated" data-animation="fadeInUpShorter"data-animation-delay="0.4s" src="theme-assets/images/wallet-payments-2x.png">
 								<div class="order-first md:order-last mb-16 md:mb-0">
-									<h3 style="color: #fff;" class="font-display text-4xl xl:text-6xl mt-4 md:mt-24 animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Simple, Borderless Payments</h3>
-									<p style="color: #fff;" class="text-xl mt-4 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Seamlessly integrated with the private messenger, send and receive payments to and from anyone, anywhere in the world.</p>
+									<h3 style="color: #fff;" class="font-display text-4xl xl:text-6xl mt-4 md:mt-24 animated" data-animation="fadeInUpShorter"data-animation-delay="0.2s">Simple, Borderless Payments</h3>
+									<p style="color: #fff;" class="text-xl mt-4 animated" data-animation="fadeInUpShorter"data-animation-delay="0.4s">Seamlessly integrated with the private messenger, send and receive payments to and from anyone, anywhere in the world.</p>
 								</div>
 							</div>
 						</div>
@@ -252,15 +252,15 @@
 					<span class="w-screen absolute -z-1 left-0 h-full"></span>
 					<div class="h-full flex flex-col space-between px-8 py-32 md:p-32 text-white">
 						<div class="flex-1">
-							<h3 class="font-display text-4xl xl:text-6xl mt-4 animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Defi & More at Your Fingertips</h3>
-							<p style="color: #fff;" class="text-xl mt-4 text-gray-300 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Access and interact with the growing world of web3 dapps with the integrated wallet and web3 browser.</p>
-							<a style="width: 150px; margin-top: 20px;" href="https://dap.ps/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 150px;">
+							<h3 class="font-display text-4xl xl:text-6xl mt-4 animated" data-animation="fadeInUpShorter"data-animation-delay="0.2s">Defi & More at Your Fingertips</h3>
+							<p style="color: #fff;" class="text-xl mt-4 text-gray-300 animated" data-animation="fadeInUpShorter"data-animation-delay="0.4s">Access and interact with the growing world of web3 dapps with the integrated wallet and web3 browser.</p>
+							<a style="width: 150px; margin-top: 20px;" href="https://dap.ps/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white animated" data-animation="fadeInUpShorter"data-animation-delay="0.4s" style="width: 150px;">
 								Learn More
 								<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 							  </a>
 						</div>
 						<div class="mt-20 order-1 md:order-none -ml-8 -mr-8 md:mx-0 mb-12 md:mb-0 md:mt-48">
-							<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" src="theme-assets/images/wallet-dapps-2x.png" srcset="./theme-assets/images/wallet-dapps-2x.png 2x" class="md:-ml-32 w-screen-2 w-screen">
+							<img class="animated" data-animation="fadeInUpShorter"data-animation-delay="0.4s" src="theme-assets/images/wallet-dapps-2x.png" srcset="./theme-assets/images/wallet-dapps-2x.png 2x" class="md:-ml-32 w-screen-2 w-screen">
 						</div>
 					</div>
 				</div>
@@ -276,24 +276,24 @@
 					<span class="w-screen absolute -z-1 right-0 h-full"></span>
 					<div class="h-full px-8 md:p-32 lg:pr-64 lg:pl-8 text-white flex flex-col space-between">
 						<div class="mt-12 mb-32 md:mb-0">
-							<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" src="theme-assets/images/wallet-accounts.svg">
+							<img class="animated" data-animation="fadeInUpShorter"data-animation-delay="0.4s" src="theme-assets/images/wallet-accounts.svg">
 						</div>
 						<div class="flex-1 mt-16 md:mt-32 order-first md:order-last">
-							<h3 style="color: #fff;" class="font-display text-4xl xl:text-6xl mt-4 animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Multiple Wallet Accounts for Greater Privacy</h3>
-							<p style="color: #fff;" class="text-xl text-gray-300 mt-4 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Create multiple accounts in your PCNP wallet. Select which account you use for interacting with DApps, sending payments, and storing funds.</p>
+							<h3 style="color: #fff;" class="font-display text-4xl xl:text-6xl mt-4 animated" data-animation="fadeInUpShorter"data-animation-delay="0.2s">Multiple Wallet Accounts for Greater Privacy</h3>
+							<p style="color: #fff;" class="text-xl text-gray-300 mt-4 animated" data-animation="fadeInUpShorter"data-animation-delay="0.4s">Create multiple accounts in your PCNP wallet. Select which account you use for interacting with DApps, sending payments, and storing funds.</p>
 						</div>
 					</div>
 				</div>
 				<div class="relative order-1 md:order-none">
 					<span class=" w-screen absolute -z-1 left-0 h-full"></span>
 					<div class="h-full px-8 py-32 md:p-32">
-						<h3 style="color: #fff;" class="font-display text-4xl xl:text-6xl mt-4 animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Hardware Security with Keycard</h3>
-						<p style="color: #fff;" class="text-xl text-gray-700 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Add a layer of security to your account and funds with Keycard - the contactless hardware wallet.</p>
-						<a style="width: 150px; margin-top: 20px;" href="https://get.keycard.tech/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="width: 150px;">
+						<h3 style="color: #fff;" class="font-display text-4xl xl:text-6xl mt-4 animated" data-animation="fadeInUpShorter"data-animation-delay="0.2s">Hardware Security with Keycard</h3>
+						<p style="color: #fff;" class="text-xl text-gray-700 animated" data-animation="fadeInUpShorter"data-animation-delay="0.4s">Add a layer of security to your account and funds with Keycard - the contactless hardware wallet.</p>
+						<a style="width: 150px; margin-top: 20px;" href="https://get.keycard.tech/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white animated" data-animation="fadeInUpShorter"data-animation-delay="0.4s" style="width: 150px;">
 							Learn More
 							<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 						  </a>
-						<img class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" src="theme-assets/images/wallet-keycard-2x.png" srcset="./theme-assets/images/wallet-keycard-2x.png 2x" class="-mb-32 mt-32">
+						<img class="animated" data-animation="fadeInUpShorter"data-animation-delay="0.4s" src="theme-assets/images/wallet-keycard-2x.png" srcset="./theme-assets/images/wallet-keycard-2x.png 2x" class="-mb-32 mt-32">
 					</div>
 				</div>
 			</div>
@@ -305,8 +305,8 @@
 		<div class="max-w-screen-2xl mx-auto lg:py-48 lg:px-20">
 			<div class="grid md:grid-cols-1">
 				<div class="flex flex-col justify-center text-white lg:xl-48 px-8 items-center py-32">
-					<h3 class="font-display text-4xl xl:text-5xl 2xl:text-6xl text-center animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Have Questions? Check out the FAQ</h3>
-					<a href="/faq/#wallet" target="_blank" class="group inline-flex group items-center text-white font-semibold font-special mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
+					<h3 class="font-display text-4xl xl:text-5xl 2xl:text-6xl text-center animated" data-animation="fadeInUpShorter"data-animation-delay="0.2s">Have Questions? Check out the FAQ</h3>
+					<a href="/faq/#wallet" target="_blank" class="group inline-flex group items-center text-white font-semibold font-special mt-12 animated" data-animation="fadeInUpShorter"data-animation-delay="0.4s">
 						Frequently Asked Questions
 						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="./theme-assets/images/icon-arrow-right-white.svg"></span>
 					</a>
@@ -333,14 +333,14 @@
 				<p  style="margin-left: 50px;  margin-top: -50px; color: #fff; " class="logo-text">PCN Protocol</p>
 				
 			</div>
-		<div class="row animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.5s" >
-			<div class="col-md-2 animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.5s" >
-				<div class="links animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.5s">
-					<h5 class="title animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.5s" style="animation-delay: 0.5s; opacity: 1; font-size: 18.4px;">Company</h5>
+		<div class="row animated fadeInUpShorter" data-animation="fadeInUpShorter"data-animation-delay="0.2s" >
+			<div class="col-md-2 animated fadeInUpShorter" data-animation="fadeInUpShorter"data-animation-delay="0.2s" >
+				<div class="links animated fadeInUpShorter" data-animation="fadeInUpShorter"data-animation-delay="0.2s">
+					<h5 class="title animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.2s" style="animation-delay: 0.2s; opacity: 1; font-size: 18.4px;">Company</h5>
 					<ul class="useful-links float-left mr-5">
-						<li class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="animation-delay: 0.6s; opacity: 1;"><a href="" target="_blank">Team</a></li>
-						<li class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.7s" style="animation-delay: 0.7s; opacity: 1;"><a href="index.html#about" target="_blank">About Us</a></li>
-						<li class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.8s" style="animation-delay: 0.8s; opacity: 1;"><a href="index.html#roadmap" target="_blank">Roadmap</a></li>
+						<li class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.4s" style="animation-delay: 0.4s; opacity: 1;"><a href="" target="_blank">Team</a></li>
+						<li class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.5s" style="animation-delay: 0.5s; opacity: 1;"><a href="index.html#about" target="_blank">About Us</a></li>
+						<li class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="animation-delay: 0.6s; opacity: 1;"><a href="index.html#roadmap" target="_blank">Roadmap</a></li>
 					</ul>
 			</div>
 			</div>
