--- a/Web3-Browser.html
+++ b/Web3-Browser.html
@@ -172,7 +172,7 @@
    
     <main><!-- Header: 3D Animation -->
      	<!--BROWSER-INTRO-->
-	<section style="margin-top: 90px; margin-left: 30px;" class="pt-16 xl:pt-0">
+	<section style="margin-top: 90px; margin-left: 30px;" class="pt-16 xl:pt-0 head-area" id="head-area">
 		<div id="particles-js"></div>
 		<div class="max-w-screen-2xl mx-auto lg:px-12">
 			<div class="grid md:grid-cols-2">
@@ -225,13 +225,13 @@
 			<div class="grid md:grid-cols-2 gap-24">
 				<div>
 					<div class="mx-auto flex justify-center items-center md:block lg:pt-48">
-						<img  class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s" src="theme-assets/images/browser-games.svg">
+						<img  class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s" src="theme-assets/images/browser-games.svg">
 					</div>
 				</div>
 				<div class="flex flex-col justify-center lg:px-48 px-8 items-start md:pt-0 lg:pt-48 pt-12 order-first md:order-last">
-					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Games, Marketplaces and More</h3>
-					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Play, collect, trade, and browse with all your favorite decentralized applications in one place.</p>
-					<a href="https://dap.ps/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
+					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">Games, Marketplaces and More</h3>
+					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display animated" data-animation="fadeInUpShorter" data-animation-delay="0.3s">Play, collect, trade, and browse with all your favorite decentralized applications in one place.</p>
+					<a href="https://dap.ps/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
 						See all DApps
 						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 					</a>
@@ -245,7 +245,7 @@
 		<div class="max-w-screen-2xl mx-auto lg:px-12 pb-24 lg:pb-64">
 			<div class="grid md:grid-cols-2 gap-24 lg:pt-48 pt-16">
 				<div class="flex flex-col justify-center lg:xl-48 px-8 items-start md:pt-0">
-					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s" >Community Curated Discovery with Dap.ps</h3>
+					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s" >Community Curated Discovery with Dap.ps</h3>
 					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl font-display animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s">Dap.ps is a third party dapp discovery solution that aims to create a fair, token curated dapp marketplace. Leveraging SNT and token economics, Dap.ps decentralizes the way we explore and find the latest DApps</p>
 					<a style="margin-top: 20px" href="https://our.pcnp.io/how-to-curate-dapps-simply/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s">
 						Learn More
@@ -254,7 +254,7 @@
 				</div>
 				<div class="mx-auto flex justify-end items-center lg:px-0 px-8">
 					<div class="mx-auto flex justify-end items-center">
-						<img  class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s" src="theme-assets/images/browser-community.svg">
+						<img  class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s" src="theme-assets/images/browser-community.svg">
 					</div>
 				</div>
 			</div>
@@ -266,11 +266,11 @@
 		<div class="max-w-screen-2xl mx-auto lg:px-12 ">
 			<div class="grid md:grid-cols-8 lg:pt-48 pt-32">
 				<div class="flex flex-col justify-center md:col-start-3 md:col-span-4 lg:xl-48 px-8 items-center md:pt-0">
-					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl text-center animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Want to submit your DApp to Dap.ps for the world to see?</h3>
-					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl text-center font-display animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">Follow the instructions at the DApp Integration Center</p>
-					<a href="/developer_tools/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
+					<h3 style="color: #fff;" class="font-display text-4xl xl:text-5xl 2xl:text-6xl text-center animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">Want to submit your DApp to Dap.ps for the world to see?</h3>
+					<p style="color: #fff;" class="text-gray-600 mt-12 text-xl text-center font-display animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">Follow the instructions at the DApp Integration Center</p>
+					<a href="/developer_tools/" target="_blank" class="flex md:inline-flex items-center font-special font-bold py-4 px-6 font-bold border text-white border-primary-base rounded hover:bg-primary-900 hover:text-white mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
 						DApp Integration Center
-						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img  class="animated" data-animation="fadeInUpShorter" data-animation-delay="0.7s" src="theme-assets/images/icon-arrow-right-white.svg"></span>
+						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 					</a>
 				</div>
 			</div>
@@ -290,8 +290,8 @@
 		<div class="max-w-screen-2xl mx-auto lg:py-48 lg:px-20">
 			<div class="grid md:grid-cols-1">
 				<div class="flex flex-col justify-center text-white lg:xl-48 px-8 items-center py-32">
-					<h3 class="font-display text-4xl xl:text-5xl 2xl:text-6xl text-center animated" data-animation="fadeInUpShorter" data-animation-delay="0.5s">Have Questions? Check out the FAQ</h3>
-					<a href="/faq/#browser" target="_blank" class="group inline-flex group items-center  font-semibold font-special mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.6s">
+					<h3 class="font-display text-4xl xl:text-5xl 2xl:text-6xl text-center animated" data-animation="fadeInUpShorter" data-animation-delay="0.2s">Have Questions? Check out the FAQ</h3>
+					<a href="/faq/#browser" target="_blank" class="group inline-flex group items-center  font-semibold font-special mt-12 animated" data-animation="fadeInUpShorter" data-animation-delay="0.4s">
 						Frequently Asked Questions
 						<span class="ml-4 group-hover:translate-x-1 transform transition-all duration-200 linear"><img src="theme-assets/images/icon-arrow-right-white.svg"></span>
 					</a>
@@ -315,14 +315,14 @@
 				<p  style="margin-left: 50px;  margin-top: -50px; color: #fff; " class="logo-text">PCN Protocol</p>
 				
 			</div>
-		<div class="row animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.5s" >
-			<div class="col-md-2 animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.5s" >
-				<div class="links animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.5s">
-					<h5 class="title animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.5s" style="animation-delay: 0.5s; opacity: 1; font-size: 18.4px;">Company</h5>
+		<div class="row animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.2s" >
+			<div class="col-md-2 animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.2s" >
+				<div class="links animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.2s">
+					<h5 class="title animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.2s" style="animation-delay: 0.2s; opacity: 1; font-size: 18.4px;">Company</h5>
 					<ul class="useful-links float-left mr-5">
-						<li class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="animation-delay: 0.6s; opacity: 1;"><a href="" target="_blank">Team</a></li>
-						<li class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.7s" style="animation-delay: 0.7s; opacity: 1;"><a href="index.html#about" target="_blank">About Us</a></li>
-						<li class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.8s" style="animation-delay: 0.8s; opacity: 1;"><a href="index.html#roadmap" target="_blank">Roadmap</a></li>
+						<li class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.4s" style="animation-delay: 0.4s; opacity: 1;"><a href="" target="_blank">Team</a></li>
+						<li class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.5s" style="animation-delay: 0.5s; opacity: 1;"><a href="index.html#about" target="_blank">About Us</a></li>
+						<li class="animated fadeInUpShorter" data-animation="fadeInUpShorter" data-animation-delay="0.6s" style="animation-delay: 0.6s; opacity: 1;"><a href="index.html#roadmap" target="_blank">Roadmap</a></li>
 					</ul>
 			</div>
 			</div>
