--- a/keygard.html
+++ b/keygard.html
@@ -155,7 +155,7 @@
    
       <main id="main" role="main" class="PCN-keycard">
 
-        <section style="margin-left: 13px; margin-top: 60px;" class="pt-16 xl:pt-64 keycard-intro">
+        <section style="margin-left: 13px; margin-top: 60px;" class="pt-16 xl:pt-64 keycard-intro head-area" id="head-area">
             <div id="particles-js"></div>
             <div class="max-w-screen-2xl mx-auto px-8 lg:px-20">
                 <div class="grid grid-cols-12 gap-12">
